# kungfu

./: .gitignore  BACKLOG.md  BENCHMARKS.md  Cargo.toml  README.md  build.sh  install.ps1  install.sh
.github/workflows/: release.yml
bench/: bench.sh
crates/kungfu-cli/: Cargo.toml
crates/kungfu-cli/src/: commands.rs  main.rs
crates/kungfu-config/: Cargo.toml
crates/kungfu-config/src/: lib.rs
crates/kungfu-core/: Cargo.toml
crates/kungfu-core/src/: lib.rs
crates/kungfu-git/: Cargo.toml
crates/kungfu-git/src/: lib.rs
crates/kungfu-index/: Cargo.toml
crates/kungfu-index/src/: indexer.rs  lib.rs  scanner.rs  watcher.rs
crates/kungfu-mcp/: Cargo.toml
crates/kungfu-mcp/src/: lib.rs
crates/kungfu-output/: Cargo.toml
crates/kungfu-output/src/: lib.rs
crates/kungfu-parse/: Cargo.toml
crates/kungfu-parse/src/: c_parser.rs  cpp_parser.rs  csharp_parser.rs  go_parser.rs  java_parser.rs  kotlin_parser.rs  lib.rs  python_parser.rs  rust_parser.rs  typescript_parser.rs
crates/kungfu-project/: Cargo.toml
crates/kungfu-project/src/: lib.rs
crates/kungfu-rank/: Cargo.toml
crates/kungfu-rank/src/: lib.rs
crates/kungfu-search/: Cargo.toml
crates/kungfu-search/src/: lib.rs
crates/kungfu-storage/: Cargo.toml
crates/kungfu-storage/src/: lib.rs
crates/kungfu-types/: Cargo.toml
crates/kungfu-types/src/: budget.rs  chunk.rs  context.rs  file.rs  lib.rs  project.rs  relation.rs  stats.rs  symbol.rs
npm/: README.md  install.js  package.json
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
