[package]
name = "kungfu-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kungfu"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kungfu-types = { workspace = true }
kungfu-config = { workspace = true }
kungfu-project = { workspace = true }
kungfu-core = { workspace = true }
kungfu-output = { workspace = true }
kungfu-index = { workspace = true }
kungfu-git = { workspace = true }
kungfu-mcp = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
