[package]
name = "kungfu-index"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
ignore = { workspace = true }
kungfu-types = { workspace = true }
kungfu-config = { workspace = true }
kungfu-storage = { workspace = true }
kungfu-parse = { workspace = true }
notify = { workspace = true }
