[package]
name = "kungfu-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
kungfu-types = { workspace = true }
kungfu-core = { workspace = true }
rmcp = { version = "1.1", features = ["server", "transport-io"] }
schemars = "1"
