[package]
name = "kungfu-parse"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
kungfu-types = { workspace = true }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
