[package]
name = "kungfu-project"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
kungfu-types = { workspace = true }
kungfu-config = { workspace = true }
